# se-toolkit-lab-7

./: docker-compose.yml  docker-compose.yml.bak
backend/: Dockerfile
bot/: Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: health.py  help.py  labs.py  scores.py  start.py
